syntax = "proto3";
package store;
option go_package = "./pb";

message OAuth2Token{
    OAuth2Token refresh_token=1;
    string token_type=2;
    string token_value=3;
    int64 expires_at=4;
}

message StoreTokenReq{
    int64 user_id=1;
    OAuth2Token access_token=2;
}

message StoreTokenRes{
    int32 code=1;
    string msg=2;
    bool ok=3;
}


message CheckTokenReq{
    string user_id=1;
}

message CheckTokenRes{
    int32 code=1;
    string msg=2;
    bool ok=3;
    bool is_exist=4;
}


message GetTokenReq{
    int64 user_id=1;
}

message GetTokenRes{
    int32 code=1;
    string msg=2;
    bool ok=3;
    Data data=4;
    message Data{
        OAuth2Token oauth_token=1;
    }
}


message RemoveTokenReq{
    string user_id=1;
}

message RemoveTokenRes{
    int32 code=1;
    string msg=2;
    bool ok=3;
}


service TokenStore{
    rpc StoreToken(StoreTokenReq) returns(StoreTokenRes);
    rpc CheckToken(CheckTokenReq) returns(CheckTokenRes);
    rpc GetToken(GetTokenReq) returns(GetTokenRes);
    rpc RemoveToken(RemoveTokenReq) returns(RemoveTokenRes);
}